// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Disabled checkbox 1`] = `
.c1 {
  position: absolute;
  opacity: 0;
}

.c1 + label {
  position: relative;
  display: block;
  padding: 0;
  cursor: pointer;
}

.c1 + label:before {
  content: '';
  position: absolute;
  left: 0px;
  top: 0px;
  width: 32px;
  height: 32px;
  background-image: url(test-file-stub) !important;
  background-repeat: no-repeat;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

.c1:checked + label:before {
  display: none;
}

.c1:disabled + label {
  color: #b8b8b8;
  cursor: auto;
}

.c1:disabled + label:before {
  -webkit-box-shadow: none;
  box-shadow: none;
  background-color: #ddd;
}

.c1:checked + label:after {
  content: '';
  position: absolute;
  left: 0px;
  top: -2px;
  width: 32px;
  height: 32px;
  background-image: url(test-file-stub) !important;
  background-repeat: no-repeat;
}

.c0 {
  font-family: system-ui,sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

<div
  className="c0"
>
  <div
    className=""
  >
    <input
      className="c1"
      id="styled-checkbox-undefined"
      name="partnersundefined"
      target="div"
      toString={[Function]}
      type="checkbox"
    />
    <label
      htmlFor="styled-checkbox-undefined"
    >
      CheckboxBase
    </label>
  </div>
</div>
`;

exports[`Enabled checkbox 1`] = `
.c1 {
  position: absolute;
  opacity: 0;
}

.c1 + label {
  position: relative;
  display: block;
  padding: 0;
  cursor: pointer;
}

.c1 + label:before {
  content: '';
  position: absolute;
  left: 0px;
  top: 0px;
  width: 32px;
  height: 32px;
  background-image: url(test-file-stub) !important;
  background-repeat: no-repeat;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

.c1:checked + label:before {
  display: none;
}

.c1:disabled + label {
  color: #b8b8b8;
  cursor: auto;
}

.c1:disabled + label:before {
  -webkit-box-shadow: none;
  box-shadow: none;
  background-color: #ddd;
}

.c1:checked + label:after {
  content: '';
  position: absolute;
  left: 0px;
  top: -2px;
  width: 32px;
  height: 32px;
  background-image: url(test-file-stub) !important;
  background-repeat: no-repeat;
}

.c0 {
  font-family: system-ui,sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

<div
  className="c0"
>
  <div
    className=""
  >
    <input
      checked={true}
      className="c1"
      id="styled-checkbox-undefined"
      name="partnersundefined"
      target="div"
      toString={[Function]}
      type="checkbox"
    />
    <label
      htmlFor="styled-checkbox-undefined"
    >
      CheckboxBase
    </label>
  </div>
</div>
`;
